# red2

./: configure.ac
data/: Makefile.am  skin.xml
data/skin_default/: Makefile.am
data/skin_default/buttons/: Makefile.am
data/skin_default/spinner/: Makefile.am
lib/dvb/: epgcache.cpp  idvb.h
lib/python/Plugins/Extensions/: Makefile.am
main/: enigma.cpp
