SUBDIRS = buttons spinner

installdir = $(pkgdatadir)/skin_default

dist_install_DATA = \
	arrowdown.png \
	arrowup.png \
        arrowleft.png \
        arrowright.png \
	bar_ber.png \
	bar_snr.png \
        ber_bar.png \
        big_monitor.png \
        border.png \
	border_epg.png \
	border_eventinfo.png \
	border_info.png \
	border_menu_300.png \
	border_menu_350.png \
	border_menu.png \
	border_multiepg.png \
	bottombar.png \
        bs_b.png \
        bs_bl.png \
        bs_br.png \
        bs_l.png \
        bs_r.png \
        bs_t.png \
        bs_tl.png \
        bs_tr.png \
        camera.png \
        chan_p_bar.png \
        connection_1.png \
        connection_2.png \
        connection_3.png \
        connection_4.png \
        connection_5.png \ 
	div-h.png \
	div-v.png \
        dvd.png \
        dvd_player.png \
        dvr.png \
        epgclock.png \
        epgclock_add.png \
        epgclock_post.png \
        epgclock_pre.png \
        epgclock_prepost.png \ 
	epg_more.png \
	epg_next.png \
	epg_now.png \
	expandable-plugins.png \
	expanded-plugins.png \
        h-white.png \
        ico_crypt_off.png \
        ico_crypt_on.png \
        ico_dolby_off.png \
        ico_dolby_on.png \ 
        ico_format_off.png \
        ico_format_on.png \
        ico_hd_off.png \
        ico_hd_on.png \
        ico_mp_forward.png \
        ico_mp_pause.png \
        ico_mp_play.png \
        ico_mp_rewind.png \
        icon_hbbtv_off.png \
        icon_hbbtv_on.png \
        ico_txt_off.png \
        ico_txt_on.png \
        ico_uhd_on.png \
        infobar.png \
        infobar_ext.png \
        info-bg_mp.png \
	info-bg.png \
        key-blue.png \
        key_frame.png \
        key-green.png \
        key-green_big.png \
        key-red.png \
        key-red_big.png \ 
        key-yellow.png \
        lcdico.png \
        mediaplayer_bg.png \
        media_player_slider.png \
        memory_bar.png \
        meter_1.png \
        meter_2.png \
        misc_p_bar.png \
        misc_p_bar_big.png \
        misc_p_bar_small.png \
        moni.png \
        movie.png \
        movie2.png \
        movie3.png \
        moviebar.png \
        movie_bar.png \
        movie_player_slider.png \
        mp.png \
        mp_buttons.png \
        mpslider.png \
	mute.png \
        muteback.png \
        mx.png \
        mytube.png \
        nactive.png \
	nim_active.png \
        ninactive.png \ 
	no_coverArt.png \
        now_arrow.png \
        overscan.png \
	pal.png \
        p_bar.png \
        picon_bg.png \
	picon_default.png \
        pl.png \
        pm_bar.png \
        pointer.png \
        pointer2.png \
	position_arrow.png \
        positioner.png \
	position_pointer.png \
        progress.png \
        progress_bar.png \
	progress_bg.png \
	progress_big.png \
        progress_c.png \
	progress_medium.png \
        progressoverlay.png \
	progress_small.png \
        radio_p_bar.png \
	rcold.png \
	rc.png \
        rec.png \
        rec2.png \
        rec_1.png \
        recbg.png \
        recbg2.png \
        scale.png \
        screensaverpicture.png \
	screws_mp.png \
	screws.png \
        seekbutton2.png \
        s_e_p.png \
        separator.png \
	sleeptimer.png \
        slider.png \
        slidermovie.png \
        slidermovie_bg.png \
        sliderosd2.png \
        sliderosd2_bg.png \
        sliderosdr.png \
        sliderosdr_bg.png \
        snr.png \
        snr2.png \
        snr2_bg.png \
        snr_back.png \
        snr_bar.png \
        startcam_1.png \
        startcam_2.png \
        startcam_3.png \
        startcam_4.png \
        ster.png \
        ster2.png \
        sub.png \
        sub_1.png \
        suggestions_bg.png \
        testscreen.png \   
	timeline-now.png \
	timeline.png \
        timeline-now2.png \
	unhandled-key.png \
        universe.png \ 
	verticalline-plugins.png \
	vkey_backspace.png \
	vkey_bg.png \
	vkey_clr.png \
	vkey_esc.png \
	vkey_icon.png \
	vkey_left.png \
	vkey_ok.png \
	vkey_right.png \
	vkey_sel.png \
	vkey_shift.png \
	vkey_shift_sel.png \
	vkey_space.png \
	vkey_text.png \
        vol.png \
        vol_back.png \
	volume.png \
        v-white.png \
        white.png \
	wizard.png \
        wizard2.png \
        you_tube.png
