installdir = $(pkgdatadir)/skin_default/buttons

dist_install_DATA = \
	blue.png \
        blue1.png \
        blue30x30.png \
        blue35x35.png \
        blue48x48.png \
        blue-big.png \
        blue_pressed.png \
	button_blue_off.png \
	button_blue.png \
	button_green_off.png \
	button_green.png \
	button_red_off.png \
	button_red.png \
	button_yellow_off.png \
	button_yellow.png \
        epg.png \
        epg_b.png \
        green1.png \
        green30x30.png \
        green35x35.png \
        green48x48.png \ 
	green-big.png \
	green.png \
        grey.png \
        info.png \
	key_0.png \
	key_1.png \
	key_2.png \
	key_3.png \
	key_4.png \
	key_5.png \
	key_6.png \
	key_7.png \
	key_8.png \
	key_9.png \
        key_arrow.png \
	key_blue.png \
        key_blue2.png \
	key_green.png \
        key_green2.png \
	key_info.png \
	key_menu.png \
	key_red.png \
        key_red2.png \ 
	key_yellow.png \
        key_yellow2.png \
	key_text.png \
        key_video.png \
        led_blue.png \
        led_green.png \
        led_red.png \
        led_yellow.png \
        menu.png \
        monibutton.png \ 
        monibutton_g.png \
        mp_buttons.png \
        ok.png \
        pvr.png \
	red-big.png \
	red.png \
        red1.png \
        red30x30.png \
        red35x35.png \
        red48x48.png \
	yellow.png \
        yellow1.png \
        yellow30x30.png \
        yellow35x35.png \
        yellow48x48.png \
        yellow-big.png   
